--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Aleksander Moloniewicz",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^2.2.5"
+    "mongodb": "^2.2.5",
+    "mongoose": "^4.5.9"
   }
 }
