--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Aleksander Moloniewicz",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
   }
