--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "async-each": "^1.0.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.11.3"
+    "mongoose": "^4.11.4"
   },
   "devDependencies": {
     "expect": "^1.20.2",
