--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "6.2.2"
   },
   "scripts": {
-    "test": "mocha server/**/*.test.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\"",
     "start": "node server/server.js"
   },
