--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.15.3",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.11.4"
+    "mongoose": "^4.11.4",
+    "validator": "^5.6.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
