--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "async-each": "^1.0.1",
     "body-parser": "^1.17.2",
+    "crypto-js": "^3.1.6",
     "express": "^4.15.3",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.5",
     "mongoose": "^4.11.4",
