--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\"",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "start-watch": "nodemon server/server.js",
+    "debug-watch": "nodemon --inspect-brk server/server.js"
   },
   "author": "Aleksander Moloniewicz",
   "license": "ISC",
@@ -17,10 +19,11 @@
     "async-each": "^1.0.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.11.4",
-    "validator": "^5.6.0"
+    "mongoose": "^4.11.5",
+    "validator": "^5.7.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
