--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "async-each": "^1.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
@@ -27,7 +29,7 @@
   },
   "devDependencies": {
     "expect": "^1.20.2",
-    "mocha": "^3.0.2",
+    "mocha": "^3.5.0",
     "nodemon": "^1.10.2",
     "supertest": "^2.0.0"
   }
